jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # כופה מעבר ל-HTTPS בלבד
spec:
  tls:
  - hosts:
    - jenkins.aui-assignment.local
    secretName: jenkins-tls-secret
  rules:
  - host: jenkins.aui-assignment.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
